diss: idm subsubsection

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -338,6 +338,115 @@
     Title = {Test- und {S}ch\"{a}tztheorie. Band I: {G}rundlagen},
     Year = {1999}}
 
+@inproceedings{2005:Coolen:Augustin,
+    Address = {Manno},
+    Author = {Coolen, F. and Augustin, T.},
+    Booktitle = {ISIPTA '05: Proceedings of the Fourth International Symposium on Imprecise Probabilities and Their Applications},
+    Editor = {Cozman, F. and Nau, B. and Seidenfeld, T.},
+    Pages = {125--134},
+    Publisher = {SIPTA},
+    Title = {Learning from multinomial data: {A} nonparametric predictive alternative to the Imprecise {D}irichlet Model},
+    Year = {2005}}
+
+@article{2009:Coolen:Augustin,
+    Author = {Coolen, F. and Augustin, T.},
+    Journal = {International Journal of Approximate Reasoning},
+    Pages = {217--230},
+    Title = {A nonparametric predictive alternative to the Imprecise {D}irichlet Model: {T}he case of a known number of categories},
+    Volume = {50},
+    Year = {2009}}
+
+@article{2005:bernard,
+    Author = {Bernard, J.-M.},
+    Fjournal = {Internatational Journal of Approximate Reasoning},
+    Journal = {International Journal of Approximate Reasoning},
+    Pages = {123--150},
+    Title = {An introduction to the imprecise {D}irichlet model for multinomial data},
+    Volume = {39},
+    Year = {2005}}
+
+@article{1997:Coolen,
+    Author = {Coolen, F.},
+    Journal = {Reliability Engineering and System Safety},
+    Pages = {61--68},
+    Title = {An imprecise {D}irichlet model for {B}ayesian analysis of failure data including right-censored observations},
+    Volume = {56},
+    Year = {1997}}
+
+@article{2010:utkin:kozine,
+    Author = {Utkin, L. and Kozine, I.},
+    Doi = {10.1016/j.strusafe.2010.08.004},
+    Issn = {0167-4730},
+    Journal = {Structural Safety},
+    Pages = {411-416},
+    Title = {On new cautious structural reliability models in the framework of imprecise probabilities},
+    Volume = {32},
+    Year = {2010},
+}
+
+@article{2010:utkin:zatenko:coolen,
+    Author = {Utkin, L. and Zatenko, S. and Coolen, F.},
+    Doi = {10.1134/S0005117910050218},
+    Issn = {0005-1179},
+    Journal = {Automation and Remote Control},
+    Pages = {935-944},
+    Title = {New Interval {B}ayesian Models for Software Reliability Based on Non-homogeneous {P}oisson Processes},
+    Volume = {71},
+    Year = {2010},
+}
+
+@article{2011:li:chen:yi:tao,
+    Author = {Li, C.-Y. and Chen, X. and Yi, X.-S. and Tao, J.-Y.},
+    Doi = {10.1109/TR.2010.2103670},
+    Issn = {0018-9529},
+    Journal = {IEEE Transactions on Reliability},
+    Pages = {323--330},
+    Title = {Interval-valued reliability analysis of multi-state systems},
+    Volume = {60},
+    Year = {2011},
+}
+
+@article{2006:utkin::expertjudgements,
+    Author = {L. Utkin},
+    Doi = {10.1016/j.ejor.2005.04.041},
+    Issn = {0377-2217},
+    Journal = {European Journal of Operational Research},
+    Pages = {385 - 398},
+    Title = {A method for processing the unreliable expert judgments about parameters of probability distributions},
+    Volume = {175},
+    Year = {2006},
+}
+
+@ARTICLE{2003:zaffalon::dementia,
+  author = {Zaffalon, M. and Wesnes, K. and Petrini, O.},
+  title = {Reliable diagnoses of dementia by the naive credal classifier inferred
+    from incomplete cognitive data},
+  journal = {Artificial Intelligence in Medicine},
+  year = {2003},
+  volume = {29},
+  pages = {61--79}
+}
+
+@article{2005:zaffalon::environment,
+    Author = {Zaffalon, M.},
+    Journal = {Environmental Modelling \& Software},
+    Pages = {1003--1012},
+    Title = {Credible classification for environmental problems},
+    Volume = 20,
+    Year = 2005}
+
+@INCOLLECTION{2007:antonucci,
+  author = {Antonucci, A. and Salvetti, A. and Zaffalon, M.},
+  title = {Credal networks for hazard assessment of debris flows},
+  booktitle = {Advanced Methods for Decision Making and Risk Management in Sustainability
+    Science},
+  publisher = {Nova Science Publishers},
+  year = {2007},
+  editor = {Kropp, J. and Scheffran, J.},
+  pages = {125--132},
+  address = {New York}
+}
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
@@ -389,6 +498,25 @@
     editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
+@incollection{itip-ipgms,
+    author    = "Alessandro Antonucci and Cassio P. de Campos and Marco Zaffalon",
+    title     = "Probabilistic Graphical Models",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+@incollection{itip-classification,
+    author    = "G. Corani and J. Abell\'{a}n and A. Masegosa and S. Moral and M. Zaffalon",
+    title     = "Classification",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
 
 @incollection{itip-computation,
     author    = "Matthias C.M. Troffaes and Robert Hable",
