--- a/intro.tex
+++ b/intro.tex
@@ -1213,7 +1213,8 @@ considering sets of priors based on sets of hyperparameters.
 For Bayesian inference in the Dirichlet-Multinomial model
 when no prior information is available,
 \textcite{1996:walley::idm} proposes as a so-called \emph{near-ignorance prior}%
-\footnote{See Section~\ref{sec:motivation:near-ignorance} ***** for a more detailed discussion of near-ignorance priors.}
+\footnote{See Sections~\ref{sec:gbicp-properties-criteria} and \ref{sec:idm-and-near-ignorance}
+for a more detailed discussion of the IDM and near-ignorance priors.}
 a set of Dirichlet priors,
 with hyperparameters constrained to the set:
 \begin{equation*}
