diss: pdc subsubsection

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -447,6 +447,14 @@
   address = {New York}
 }
 
+@article{1976:mardiaelatoum,
+  Author = {Mardia, K. and {El-Atoum}, S.},
+    Journal = {Biometrika},
+    Pages = {203--206},
+    Title = {Bayesian Inference for the {Von Mises Fisher} Distribution},
+    Volume = {63},
+    Year = {1976}}
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
