diss: reorgnising the chapter structure (central part in own chapter), transition pars checked

--- a/diss.tex
+++ b/diss.tex
@@ -59,7 +59,9 @@
 
 \mainmatter\setcounter{page}{1}
   \include{intro}
+%\part{Generalised Bayesian Inference with Sets of Priors}
   \include{genbayesinf}
+  \include{setsofconjugatepriors}
   %\include{kap_02}
   %\include{kap_03}
   %\include{kap_04} usw.
